# docker-silvaengine-gateway

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  overrides.txt  pyproject.toml  requirements.txt  supervisord.conf
